# holodos

./: CMakeLists.txt  CreateItemPage.qml  MainPage.qml  README.md  main.cpp  main.qml  qml.qrc
include/: foodList.h  holodosMainWidget.h  tablemodel.h
src/: tablemodel.cpp
